adding some list and nested list

--- a/common.html
+++ b/common.html
@@ -6,6 +6,61 @@
     <title>Common Htlm Practice Repo</title>
 </head>
 <body>
-    
+    <div>
+        <h2>In this election Hasnat Abdullah Brother won by huge vote In-sha-Allah</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates quia, quibusdam odio at nulla optio a deserunt esse corporis?</p>
+        </div>
+        <div>
+            <p>Saepe voluptas, pront impedit obcaecati eligendi voluptatem officiis corrupti fugit animi dolorem iste, reiciendis raesentium cum nam alias nihil?
+            </p>
+        </div>
+        <div>
+            <p>Nostrum illo modi vero ullam laudantium accusamus nemo, dicta optio rerum architecto, in cum aliquam. Voluptas possimus libero tenetur? Velit!</p>
+        </div>
+    </div>
+    <div>
+        <div>
+            <ul>
+                <li>Home
+                            <ul>
+                                <li>Home</li>
+                                <li>About</li>
+                                <li>Service</li>
+                                <li>Contact</li>
+                            </ul>
+                </li>
+                <li>About</li>
+                <li>Service</li>
+                <li>Contact</li>
+            </ul>
+            <ul>
+                <li>Alan</li>
+                <li>Turna</li>
+                <li>Palak</li>
+                <li>Tanjil</li>
+            </ul>
+            <ul>
+                <li>Biriyani
+                            <ul>
+                                <li>Home 
+                                     <ul>
+                                        <li>Home</li>
+                                        <li>About</li>
+                                        <li>Service</li>
+                                        <li>Contact</li>
+                                    </ul>
+                                </li>
+                                <li>About</li>
+                                <li>Service</li>
+                                <li>Contact</li>
+                            </ul>
+                </li>
+                <li>Moglai</li>
+                <li>Samucha</li>
+                <li>Choholet</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
