--- a/Image_Map/Mobile.html
+++ b/Image_Map/Mobile.html
@@ -8,7 +8,7 @@
 <body>
     <h3>Mobile</h3>
     <img src="images/images/cellphone.jpg" alt="">
-    <marquee behavior="loop" direction="left">
+    <marquee behavior="" direction="left">
         mahabub
     </marquee>
 </body>
